feat: add 'deck:list' command

--- a/composer.json
+++ b/composer.json
@@ -12,7 +12,8 @@
         "symfony/flex": "^2",
         "symfony/framework-bundle": "7.2.*",
         "symfony/runtime": "7.2.*",
-        "symfony/yaml": "7.2.*"
+        "symfony/yaml": "7.2.*",
+      "ext-curl": "*"
     },
     "require-dev": {
     },
